--- a/Risk Modelling/1.Return_Properties.ipynb
+++ b/Risk Modelling/1.Return_Properties.ipynb
@@ -201,7 +201,7 @@
    "source": [
     "Outro fato importante pode ser observado: existem agrupamentos onde os retornos parecem ter maior volatilidade. Particularmente as quedas em 2008 e 2020, como visto no gráfico em nível, estão associados a maior volatiladidade dos retornos do IBOV. Este fenômeno de agrupamento é chamado de *cluster de volatilidade* e indica algo muito importante: **a volatilidade é variante no tempo**. \n",
     "\n",
-    "Inicialmente para medir a volatilidade da série, utilizaremos a variância ($\\bar{\\sigma}^2$) ou desvio padrão ($\\bar{\\sigma}$) não-condicional dos retornos."
+    "Inicialmente para medir a volatilidade da série, utilizaremos a variância ($\\sigma^2$) ou desvio padrão ($\\sigma$) amostral dos retornos."
    ]
   },
   {
@@ -227,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como veremos, essas medidas não são as mais adequadas para mensuração da volatilidade, pois a variância dos retornos é dependente no tempo. Isso ocorre justamente porque os períodos ou instantes da série com alta volatilidade tendem a permanecer assim. Uma maneira de observarmos a variância como variante no tempo é elevarmos os retornos do ativo ao quadrado $r_t^2$. Podemos derivar o por que desta transformação rapidamente. Dada a fórmula da Variância com o operador da esperança:\n",
+    "Como veremos, essas medidas não são as mais adequadas para mensuração da volatilidade, pois a variância dos retornos é dependente no tempo. Isso ocorre justamente porque os períodos ou instantes da série com alta volatilidade tendem a permanecer assim. Uma maneira de observarmos a variância como variante no tempo é elevarmos os retornos do ativo ao quadrado $r_t^2$. Podemos derivar o porque desta transformação rapidamente. Dada a fórmula da Variância com o operador da esperança:\n",
     "\n",
     "$$Var(r_t) = E(r_t - \\bar{r}_t)^2$$\n",
     "$$\\Rightarrow E(r_t^2) - E(r_t)^2$$\n",
@@ -463,9 +463,8 @@
     "Com base na definição acima diz-se que a série dos retornos é fracamente estacionária. Para sermos mais rigorosos, podemos implementar o teste de Dickey-Fuller Aumentado (ADF) para testar a estacionariedade da série. Não entrarei no detalhe da formulação do teste, assim como os anteriores. Basicamente, no teste ADF a hipótese nula é que o processo gerador da série temporal tenha uma raiz unitária, o que por sua vez indica que a série é não-estacionária.\n",
     "\n",
     "$$\n",
-    "H0: Não-Estacionária \\\\\n",
-    "H1: Estacionária\n",
-    "$$"
+    "H0: Não-Estacionária $$\n",
+    "$$H1: Estacionária$$\n"
    ]
   },
   {
