Added to part 2

--- a/Risk Modelling/1.Return_Properties.ipynb
+++ b/Risk Modelling/1.Return_Properties.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "your_filepath = \"\"\n",
     "df_ibov = yfinance.download('^BVSP')\n",
-    "# df_ibov.to_excel(fr'{your_filepath}\\FinancialEconometrics\\Risk Modelling\\Data\\Ibov.xlsx'"
+    "# df_ibov.to_excel(fr'{your_filepath}\\FinancialEconometrics\\Risk Modelling\\Data\\Ibov.xlsx')"
    ]
   },
   {
@@ -111,7 +111,7 @@
     "\n",
     "Vantagens do log retorno:\n",
     "- Os retornos logarítmicos podem ser interpretados como retornos continuamente compostos.\n",
-    "- Ao considerar retornos de vários períodos, o log retorno períodos é simplesmente a soma dos log retornos. \n",
+    "- Ao considerar retornos de vários períodos, o retorno total é simplesmente a soma dos log retornos. \n",
     "\n",
     "No decorrer desse estudo, usarei o log retorno como a forma padrão no cálculo dos retornos e irei me referir a ele simplesmente como retorno ($r_t$).\n"
    ]
@@ -185,7 +185,9 @@
    "source": [
     "Por isso tem-se que:\n",
     "\n",
-    "$$ E({r_t}) = 0$$"
+    "$$ E({r_t}) = 0$$\n",
+    "\n",
+    "Interpretação -> MARTIGAIS, a ser feito"
    ]
   },
   {
